2025-04-24T01:19:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14631326393 # 623
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-24
* notice: last 14d: unq all: 5 15
* notice: prev accum: outdated-unq outdated-all / unq all: 968 1448 / 983 1463
* notice: next accum: outdated-unq outdated-all / unq all: 968 1448 / 984 1464
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-10 2025-04-23]

2025-04-23T01:19:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14607829615 # 622
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-23
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 967 1447 / 982 1462
* notice: next accum: outdated-unq outdated-all / unq all: 968 1448 / 983 1463
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-09] / [2025-04-22]

2025-04-22T01:18:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14584587522 # 621
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-22
* notice: last 14d: unq all: 4 15
* notice: prev accum: outdated-unq outdated-all / unq all: 966 1446 / 981 1461
* notice: next accum: outdated-unq outdated-all / unq all: 967 1447 / 982 1462
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-04-08] / [2025-04-21]

2025-04-21T01:22:17Z: