@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-04-24T01:19:17Z",
-  "count_outdated" : 1448,
-  "uniques_outdated" : 968,
-  "count" : 1464,
-  "uniques" : 984,
+  "timestamp" : "2025-04-25T01:19:58Z",
+  "count_outdated" : 1451,
+  "uniques_outdated" : 971,
+  "count" : 1466,
+  "uniques" : 986,
   "clones" : [
-    {
-      "timestamp": "2025-04-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2025-04-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-13T00:00:00Z",
       "count": 1,
@@ -115,6 +97,24 @@
     },
     {
       "timestamp": "2025-04-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
