@@ -1,17 +1,7 @@
 {
   "count": 15,
-  "uniques": 5,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2025-04-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2025-04-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-13T00:00:00Z",
       "count": 1,
@@ -64,6 +54,16 @@
     },
     {
       "timestamp": "2025-04-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
