@@ -1,3 +1,12 @@
+2025-04-25T01:19:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14654889724 # 624
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-25
+* notice: last 14d: unq all: 4 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 968 1448 / 984 1464
+* notice: next accum: outdated-unq outdated-all / unq all: 971 1451 / 986 1466
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-04-10 2025-04-11] / [2025-04-24 2025-04-25]
+
 2025-04-24T01:19:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14631326393 # 623
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-24
